Closed Bug 1099335 Opened 10 years ago Closed 10 years ago

Complex clip avoidance code isn't working with Direct2D 1.1

Categories

(Core :: Graphics, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla36

People

(Reporter: bas.schouten, Assigned: bas.schouten)

Details

Attachments

(1 file)

Currently we only check the backend type to see whether we need to avoid using complex clips. Direct2D 1.1 is not included in this check.
Attachment #8523148 - Flags: review?(jmuizelaar) → review+
https://hg.mozilla.org/mozilla-central/rev/ec7ca2a5439b
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla36
You need to log in before you can comment on or make changes to this bug.